--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
   "author": "Ian He",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@polkadot/api": "^4",
-    "@subql/types": "^0.7.1",
+    "@polkadot/api": "5.5.2",
+    "@subql/types": "^0.8.2",
     "typescript": "^4.1.3",
-    "@subql/cli": "^0.9.3"
+    "@subql/cli": "^0.11.1"
   }
 }
