--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
   "author": "Ian He",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@polkadot/api": "6.4.1",
-    "@subql/types": "0.10.0",
-    "typescript": "4.4.4",
-    "@subql/cli": "0.15.0"
+    "@polkadot/api": "^6",
+    "@subql/types": "latest",
+    "typescript": "^4.1.3",
+    "@subql/cli": "latest"
   }
 }
